--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="verde_escuro">#012030</color>
+    <color name="azul">#13678A</color>
+    <color name="verde_agua">#45C4B0</color>
+    <color name="verde_claro">#9AEBA3</color>
+    <color name="verde_amarelo">#DAFDBA</color>
     <color name="black">#FF000000</color>
+    <color name="cinza">#808080</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
