--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bd_edit"
-            android:drawableStart="@drawable/ic_email"
+            android:drawableStart="@drawable/ic_email_line"
             android:drawablePadding="9dp"
             android:hint="E-mail"
             android:padding="12dp"
@@ -61,7 +61,7 @@
             android:layout_marginTop="16dp"
             android:background="@drawable/bd_btn"
             app:backgroundTint="@null"
-            android:text="Entrar"
+            android:text="ENTRAR"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
