--- a/app/src/main/res/layout/fragment_recover.xml
+++ b/app/src/main/res/layout/fragment_recover.xml
@@ -32,7 +32,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="Recuperar minha senha"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp" />
 
             </androidx.appcompat.widget.Toolbar>
 
@@ -54,57 +54,53 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayout"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
             android:hint="E-mail"
-            android:textColorHint="@color/cinza"
-            app:boxBackgroundMode="none"
-            app:boxStrokeColor="@color/cinza"
+            android:textColor="@color/verde_escuro"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView">
+            tools:layout_editor_absoluteY="150dp" />
 
-            <EditText
-                android:id="@+id/editTextEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:inputType="textEmailAddress"
-                android:drawableStart="@drawable/ic_email"
-                android:drawablePadding="8dp"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                app:drawableTint="@color/verde_escuro" />
-
-            <!-- View para a linha abaixo do EditText -->
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/cinza"
-                android:layout_gravity="bottom"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
+        <EditText
+            android:id="@+id/editText4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/bd_edit_around"
+            android:drawableStart="@drawable/ic_email_line"
+            android:drawablePadding="8dp"
+            android:hint="Digite seu e-mail"
+            android:inputType="textEmailAddress"
+            android:padding="14dp"
+            android:textColorHint="@color/cinza"
+            app:drawableTint="@color/verde_escuro"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/materialButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bd_btn"
             android:layout_margin="24dp"
-            android:text="Entrar"
+            android:background="@drawable/bd_btn"
+            android:text="ENVIAR E-MAIL"
             app:backgroundTint="@null"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.666"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
         <ProgressBar
+            android:id="@+id/progressBar2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
             android:layout_marginTop="16dp"
             android:indeterminateTint="@color/verde_escuro"
             app:layout_constraintEnd_toEndOf="parent"
