--- a/app/src/main/res/layout/fragment_recover.xml
+++ b/app/src/main/res/layout/fragment_recover.xml
@@ -66,7 +66,7 @@
             tools:layout_editor_absoluteY="150dp" />
 
         <EditText
-            android:id="@+id/editText4"
+            android:id="@+id/edit_email_recuperar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
@@ -85,7 +85,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/materialButton"
+            android:id="@+id/btn_enviar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
@@ -95,7 +95,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.666"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText4" />
+            app:layout_constraintTop_toBottomOf="@+id/edit_email_recuperar" />
 
         <ProgressBar
             android:id="@+id/progressBar2"
@@ -106,7 +106,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/materialButton" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_enviar" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
