--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,9 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.BancoDigital" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:windowBackground">@color/azul</item>
+        <item name="colorPrimary">@color/verde_escuro</item>
+        <item name="colorPrimaryVariant">@color/verde_escuro</item>
     </style>
-
-
-
     <style name="Theme.BancoDigital" parent="Base.Theme.BancoDigital" />
 </resources>
