--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -74,6 +74,7 @@
             app:layout_constraintTop_toBottomOf="@+id/btn_entrar">
 
             <TextView
+                android:id="@+id/text_criar_conta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -81,6 +82,7 @@
                 android:textColor="@color/black" />
 
             <TextView
+                android:id="@+id/text_recuperar_conta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
