--- a/app/src/main/res/layout/fragment_recover.xml
+++ b/app/src/main/res/layout/fragment_recover.xml
@@ -63,14 +63,13 @@
             android:textColor="@color/verde_escuro"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="150dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <EditText
             android:id="@+id/edit_email_recuperar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
-            android:layout_marginTop="4dp"
             android:background="@drawable/bd_edit_around"
             android:drawableStart="@drawable/ic_email_line"
             android:drawablePadding="8dp"
@@ -100,6 +99,8 @@
         <ProgressBar
             android:id="@+id/progressBar2"
             android:layout_width="wrap_content"
+            android:visibility="invisible"
+            tools:visibility="visible"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:indeterminateTint="@color/verde_escuro"
