- Criando Style para EditText - Criando RegisterViewModel,LoginViewModel e RecoverViewModel - Realizando criação da conta no app

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -17,13 +17,12 @@
         <EditText
             android:id="@+id/edit_email"
             android:layout_width="match_parent"
+            style="@style/Theme.EditText"
             android:layout_height="wrap_content"
-            android:background="@drawable/bd_edit"
             android:drawableStart="@drawable/ic_email_line"
             android:drawablePadding="9dp"
             android:hint="E-mail"
-            android:padding="12dp"
-            app:drawableTint="@color/verde_escuro"
+            android:background="@drawable/bd_edit_around"
             app:layout_constraintBottom_toTopOf="@+id/edit_password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,10 +34,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:background="@drawable/bd_edit"
+            style="@style/Theme.EditText"
+            android:background="@drawable/bd_edit_around"
             android:hint="Password"
             android:drawableStart="@drawable/ic_senha"
-            android:padding="12dp"
             android:drawablePadding="9dp"
             app:drawableTint="@color/verde_escuro"
             app:layout_constraintBottom_toTopOf="@+id/btn_entrar"
