--- a/app/src/main/res/layout/fragment_recover.xml
+++ b/app/src/main/res/layout/fragment_recover.xml
@@ -72,11 +72,10 @@
             android:layout_marginHorizontal="24dp"
             android:background="@drawable/bd_edit_around"
             android:drawableStart="@drawable/ic_email_line"
+            style="@style/Theme.EditText"
             android:drawablePadding="8dp"
             android:hint="Digite seu e-mail"
             android:inputType="textEmailAddress"
-            android:padding="14dp"
-            android:textColorHint="@color/cinza"
             app:drawableTint="@color/verde_escuro"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
