--- a/app/src/main/res/drawable/bd_edit.xml
+++ b/app/src/main/res/drawable/bd_edit.xml
@@ -3,7 +3,9 @@
 
     android:shape="rectangle">
 
-    <stroke android:width="1dp" android:color="@color/verde_escuro"/>
+    <stroke
+        android:width="1dp"
+        android:color="@color/verde_menos_escuro" />
     <corners android:radius="100dp"/>
 
 </shape>
