--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,15 @@
         <item name="colorPrimary">@color/verde_escuro</item>
         <item name="colorPrimaryVariant">@color/verde_escuro</item>
     </style>
+
+    <style name="Theme.EditText" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:background">@drawable/bd_edit</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:textColorHint">@color/cinza</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/verde_escuro</item>
+    </style>
+
     <style name="Theme.BancoDigital" parent="Base.Theme.BancoDigital" />
+
 </resources>
